created deployment specification
